--- a/style/sass/_mixins.scss
+++ b/style/sass/_mixins.scss
@@ -74,3 +74,11 @@
 @mixin for-screen-min($size) { // @todo: make the actual size = size - 1
     @media (min-width: $size + 1) { @content; }
 }
+
+// standards
+@mixin remove-outer-text-margin() {
+    > h1, h2, h3, h4, h5, h6, p, a {
+        &:first-child { margin-top: 0; }
+        &:last-child { margin-bottom: 0; }
+    }
+}
